kube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafkaoffsetmonitor
  labels:
    app: kafkaoffsetmonitor
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
    name: http
  selector:
    app: kafkaoffsetmonitor
